# py_kbase

./: README.md
kbase_msgs/: CMakeLists.txt  package.xml
kbase_msgs/msg/: Gender.msg  KBaseReturnStatus.msg  Location.msg  Object.msg  ObjectCategory.msg  Person.msg  State.msg  Viewpoint.msg
kbase_msgs/srv/: DataOperation.srv  Dump.srv
kbase_server/: CMakeLists.txt  package.xml  setup.py
kbase_server/src/py_kbase/: server.py
